# ChangeLog for net-dialup/ltmodem
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ltmodem/ChangeLog,v 1.10 2003/12/09 14:41:39 lanius Exp $

*ltmodem-8.26_alpha9-r2 (09 Dec 2003)

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org>
  ltmodem-8.26_alpha9-r1.ebuild, ltmodem-8.26_alpha9-r2.ebuild:
  moved --with-force changes to -r2 since they can break things

  07 Dec 2003; Heinrich Wendel <lanius@gentoo.org>
  ltmodem-8.26_alpha9-r1.ebuild:
  forgot to add ${KV} to build_module

  06 Dec 2003; Heinrich Wendel <lanius@gentoo.org>
  ltmodem-8.26_alpha9-r1.ebuild:
  added --with-force=yes to build in chroot

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> metadata.xml:
  metadata.xml

*ltmodem-8.26_alpha9-r1 (23 May 2003)
  
  23 May 2003; Chuck Brewer <killian@gentoo.org>:
  Added manifest.

*ltmodem-8.26_alpha9-r1 (25 Jan 2003)

  25 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Added updates and stuff from #14528.  Thanks goes to
  fkqstjg02@sneakemail.com (Tom Poplawski).
  Added a few tweaks from #7805.  Thanks goes to
  Denys Duchier <duchier@ps.uni-sb.de>.

*ltmodem-8.26_alpha9 (09 Jan 2003)

  09 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bumped #13099.

*ltmodem-8.22_alpha5 (02 Oct 2002)

  02 Oct 2002; Mike Frysinger <vapier@gentoo.org> ltmodem-8.22_alpha5.ebuild :
  Initial import. Ebuild submitted by myself.