@@ -1,6 +1,8 @@
 MD5 b99ab1cca0776ce2017c43e2cdcea22f ltmodem-8.26_alpha9-r1.ebuild 1553
+MD5 59d0a95fa60a59e99823300462c415b1 ltmodem-8.26_alpha9-r3.ebuild 1927
 MD5 1f37317383191bc5a63fc394717baf04 ltmodem-8.26_alpha9-r2.ebuild 1573
 MD5 6c28446b9104b9681351191a4c8137e2 ChangeLog 1436
 MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
 MD5 f5ab4274b107a9ac1e7d521c5dbb594a files/digest-ltmodem-8.26_alpha9-r1 66
 MD5 f5ab4274b107a9ac1e7d521c5dbb594a files/digest-ltmodem-8.26_alpha9-r2 66
+MD5 c7770cf081fb61801ccdcf7eb67175dc files/digest-ltmodem-8.26_alpha9-r3 137
