@@ -1,0 +1,2 @@
+MD5 a75ae27d40ade3aa698c0b0b290724f4 ltmodem-8.26a9.tar.gz 679998
+MD5 c219d9d62034da24c1543f3c4bce1c91 ltmodem-2.6-alk-v00.tar.gz 217382
